--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mocha": "^2.4.5"
   },
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "tsort": "0.0.1"
   },
   "scripts": {
     "test": "mocha test/test.js"
